--- a/1-Basic/UserDetailsClient/UserDetailsClient/UserDetailsClient.csproj
+++ b/1-Basic/UserDetailsClient/UserDetailsClient/UserDetailsClient.csproj
@@ -9,8 +9,9 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.35.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.35.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="PCAHelper" Version="0.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
   </ItemGroup>
 
